--- a/recipes/templates/partials/_search.html
+++ b/recipes/templates/partials/_search.html
@@ -6,8 +6,9 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <form action="#" method="post">
-                    <input type="search" name="search" placeholder="What are you searching for...">
+                <form action="{% url 'search' %}">
+                    {% csrf_token %}
+                    <input type="text" name="search" placeholder="What are you searching for...">
                     <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
                 </form>
             </div>
