--- a/recipes/templates/recipe.html
+++ b/recipes/templates/recipe.html
@@ -7,9 +7,9 @@
         <img src="img/core-img/hamburger.png" alt="">
     </div>
 
-    {% include 'partials/search.html' %}
+    {% include 'partials/_search.html' %}
 
-    {% include 'partials/menu.html' %}
+    {% include 'partials/_menu.html' %}
 
     <!-- Recipe Post Search -->
     <div class="receipe-post-search mb-80">
@@ -86,5 +86,5 @@
         </div>
     </div>
 
-    {% include 'partials/footer.html' %}
+    {% include 'partials/_footer.html' %}
 {% endblock %}
