--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -8,8 +8,8 @@
     </div>
 
     {% include 'partials/_search.html' %}
-
     {% include 'partials/_menu.html' %}
+    {% include 'partials/_alerts.html' %}
 
     <!-- Recipe Post Search -->
     <div class="receipe-post-search mb-80">
