--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
     </div>
 
     {% include 'partials/_search.html' %}
-
     {% include 'partials/_menu.html' %}
+    {% include 'partials/_alerts.html' %}
 
     <!-- ##### Best Recipe Area Start ##### -->
     <section class="best-receipe-area">
