feat: Boas Práticas no Django: Apps, Pastas e Paginação.
Porém, para fazer o contorno e ter o Django e o Pycharm contentes dá
pra fazer o seguinte:

0 - declarar, no settings.py, `INSTALLED_APPS` com o apps. no começo da
  identificação do app:

1 - Atualizar o recipes/apps.py para com o prefixo 'apps.' no name

`name = 'apps.recipes' # note que foi adicionado apps. na frente`

2 - Ajustar as referências no projeto para esse model:

de `from recipes.models import Recipe` para `from apps.recipes.models
import Recipe`

Nos arquivos:

* apps/recipes/admin.py01~
* apps/recipes/views/recipe_crud.py
* apps/recipes/views/searcher.py
* apps/recipes/urls.py
* apps/recipe_users/views.py

--- a/templates/partials/_menu.html
+++ b/templates/partials/_menu.html
@@ -1,5 +1,5 @@
 {% load static %}
-"<!-- ##### Header Area Start ##### -->
+<!-- ##### Header Area Start ##### -->
 <header class="header-area">
     <!-- Top Header Area -->
     <div class="top-header-area">
@@ -57,10 +57,12 @@
                         <!-- Nav Start -->
                         <div class="classynav">
                             <ul><li><a href="{% url 'index' %}">Home</a></li></ul>
-
                             {% if user.is_authenticated %}
                                 <ul><li><a href="{% url 'dashboard' %}">My Recipes</a></li></ul>
                                 <ul><li><a href="{% url 'create_recipe' %}">Create Recipe</a></li></ul>
+                                {% if user.is_superuser %}
+                                <ul><li><a href="{% url 'admin:index' %}">Admin Area</a></li></ul>
+                                {% endif %}
                                 <ul><li><a href="{% url 'logout' %}">Logout</a></li></ul>
                             {% else %}
                                 <ul><li><a href="{% url 'register' %}">Register</a></li></ul>
