--- a/templates/recipes/index.html
+++ b/templates/recipes/index.html
@@ -36,6 +36,8 @@
     </section>
     <!-- ##### Best Recipe Area End ##### -->
 
+    {% include 'recipes/pagination.html' %}
+
     {% include 'partials/_footer.html' %}
 
 {% endblock %}
